# dolydev

./: .gitignore  README.md  patch_drive_service.py  test_turn.py  update_mc.py
3rd/tofx/test/: CMakeLists.txt  build.sh  run.sh  test_common.cpp  test_common.h  tof_alts_cal.cpp  tof_calibration.cpp  tof_continuoustest.cpp  tof_cruise.cpp  tof_demo.cpp  tof_historytest.cpp  tof_perform.cpp  tof_simpletest.cpp
3rd/tofx/test/data/: tof_lux_calibration.json  tof_offsets.json
SDK/examples/cpp/ArmControl/: CMakeLists.txt  main copy.cpp  main.cpp  main0.cpp
SDK/examples/cpp/Camera/: CMakeLists.txt  main.cpp
SDK/examples/cpp/SerialControl/: CMakeLists.txt  main.cpp
SDK/examples/cpp/TtsControl/: CMakeLists.txt  main.cpp
config/: autocharge.yaml  (+27 more)
libs/Doly/LcdExample/: CMakeLists.txt  README.md  anim.cpp  animation_player.cpp  animation_player.h  eye.cpp  eye.h  eye_frames.cpp  eye_frames.h  love.h  pylcd.cpp  udev.md  utils.cpp  utils.h
libs/FaceReco/FaceReco_backup_1776086623/: .gitignore  CMakeLists.txt  README.md  config.ini  descriptors.yml
libs/audio_player/: CMakeLists.txt  COPYING  build.sh
libs/audio_player/apps/: audio_player_main.cpp
libs/audio_player/docs/: README_REPEAT_PLAYBACK.md  zmq_command_design.md  模块介绍.md  测试说明.md
libs/audio_player/install/: audio_player_service
libs/audio_player/lcdctl/: build.sh  gpio12_pwm_test  lcdctl  lcdctl.cpp
libs/audio_player/scripts/: doly-audio-player.service  generate_alias_paths.py  manage_audio_player_service.sh
libs/audio_player/src/: audio_player_service.cpp  config.cpp
libs/audio_player/testing/: README_REPEAT_PLAYBACK.md  check_status.py  test_audio_stop.py  test_multi_audio.py  test_play_file.py  test_repeat_playback.py
libs/autocharge/: CMakeLists.txt  run_with_sdk.sh
libs/autocharge/src/: autocharge_service.cpp  autocharge_service_main.cpp  config_loader.cpp  debug_renderer.cpp  docking_planner.cpp  marker_detector.cpp  marker_tool_main.cpp  power_monitor.cpp  tof_monitor.cpp
libs/autocharge/tests/: test_docking_planner.cpp  test_marker_detector.cpp
libs/autocharge/tools/: collect_failed_samples.sh  lcd_test.cpp
libs/capture_control/: CMakeLists.txt
libs/capture_control/include/: capture_control.h
libs/capture_control/src/: capture_control.cpp
libs/coms/msgbus_cpp/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  publish_example  subscribe_example
libs/drive/: CMakeLists.txt  README.md  build.sh
libs/drive/archs/: motor_controller_legacy.cpp
libs/drive/docs/: python测试脚本使用指南.md  模块介绍.md  运维.md
libs/drive/python/: drive_test_utils.py  test_animation_motor_api.py  test_ext_io.py  test_motor_basic.py  test_rgb.py  test_servo_basic.py
libs/drive/scripts/: drive-service.service  manage_service.sh  run_sdk_migration_tests.sh  sync_drivecontrol_sdk.sh  sync_sdk.sh
libs/drive/src/: config_loader.cpp  drive_service.cpp  drive_service_main.cpp  encoder_reader.cpp  gen_cpp.py  led_controller.cpp  lifecycle_manager.cpp  motor_controller.cpp  pca9535_bus_adapter.cpp  pca9535_config_v2.cpp  pca9535_hal.cpp  pca9535_ovos_bridge.cpp  pca9535_patterns.cpp  pca9535_service.cpp  pid_controller.cpp  pybind_motor.cpp  safety_monitor.cpp  sensor_subscriber.cpp  servo_controller.cpp  shared_state_utils.cpp  stub.sh  test_drive_sdk.cpp  zmq_control_receiver.cpp  zmq_publisher.cpp
libs/drive/tests/: debug_motor_pulse.py  drive_test_client.py  quick_test.py  quick_test.sh  quick_test_enc_motor.py  quick_test_enhanced.py  quick_test_enhanced_swingof.py  quick_test_pwm_compensation.py  quick_test_rotate.py  quick_test_sdk_api.py  quick_verify_api.py  quick_verify_api_single.py  run_animation_motor_test.sh  test_action_choreography.py  test_animation_api.py  test_animation_api_pid.py  test_animation_motor_api.py  test_default_config.py  test_eye_state.cpp  test_io_state_sync.cpp  test_motor_with_encoder.cpp  test_move_distance_cmd.py  test_pca9535.cpp  test_pca9535_bus.cpp  test_pca9535_enable.cpp  test_pca9535_full.cpp  test_pca9535_ovos_bridge.cpp  test_pca9535_sub.cpp  test_push_cpp.cpp  test_push_fixed.py  test_pwm_compensation.py  test_quick_actions.py  test_servo_enhanced.py  test_servo_mapping.cpp  test_zmq_push.py  verify_io_sync.py
libs/fan/: CMakeLists.txt  README.md  fan_service_wrapper.sh
libs/fan/apps/: fan_service_main.cpp
libs/fan/docs/: 模块介绍.md  运维.md
libs/fan/include/: fan_service_bus.h
libs/fan/scripts/: QUICK_COMMANDS.sh  build_service.sh  fan-control.service  manage_service.sh  run_service.sh  sub_fan_status.py
libs/fan/src/: fan_service_bus.cpp
libs/fan/tests/: send_fan_cmd.py  sub_fan_status.py  test_persistent_mode.sh
libs/serial/: CMakeLists.txt  README.md
libs/serial/apps/: serial_service_main.cpp
libs/serial/docs/: 命令.md  模块介绍.md  说明.md  运维.md  需求.md
libs/serial/scripts/: doly-serial.service  manage_serial_service.sh  publish_sdk.sh  su03t_firmware_updater.py
libs/serial/src/: serial_service.cpp
libs/serial/tests/: serial_cmd_sub.py  test_serial_pub.py
libs/widgets/: CMakeLists.txt  COMPLETION_REPORT.md  widget_service.sh
libs/widgets/config/: widgets.default.json
libs/widgets/docs/: bug.md  模块介绍.md  测试.md  需求.md
libs/widgets/python/: test_widget_service.py  widget_clock_api_test.py
libs/widgets/scripts/: manage_service.sh  widget-service.service
libs/widgets/src/: widget_service.cpp
xiaozhidev/xiaozhi_client/: CMakeLists.txt  control_center.cc  control_center.h  control_center_utils.cc  control_center_utils.h  http.cc  main.cc  touch_event_listener.cc  touch_event_listener.h  uuid.cc  websocket_client.cc  xiaozhi_zmq_publisher.cc  xiaozhi_zmq_publisher.h
xiaozhidev/xiaozhi_client/docs/: 运维.md
xiaozhidev/xiaozhi_client/scripts/: deploy_xiaozhi_integration.sh  manage_xiaozhi_client_service.sh  monitor_emotion.py
xiaozhidev/xiaozhi_client/snd_core/: acap.cc  acap.h  audio_cfg.h  capture_pcm.cc  capture_pcm.h  play_pcm.cc  play_pcm.h  wake_word_generator.cc  wake_word_generator.h  webrtc_audio_enhance.cc  webrtc_audio_enhance.h  webrtc_audio_improvement.cc  webrtc_audio_improvement.h  webttsctrl.cc  webttsctrl.h
(+828 files in other folders)
